--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,8 @@
+:root {
+  --text-color: #2c3e50;
+}
 html {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui;
 }
 
 body {
@@ -11,11 +13,11 @@ header.page {
   max-width: 960px;
   margin: 0 auto;
   padding: 0 1rem;
-}
 
-header.page h1 {
-  font-size: 3rem;
-  font-weight: 500;
-  text-align: center;
-  color: #2c3e50;
+  & h1 {
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+    color: var(--text-color);
+  }
 }
